--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,15 +1,40 @@
 <div class="container">
-	<% @tags.each do |tag| %>
+	<% @tags.each_with_index do |tag, index| %>
 	<div class="row">
 		<div class="col-sm-12"><h1><%= tag.name %></h1></div>
 	</div>
+
 	<div class="row">
-		<% tag.games.each do |game| %>
-		  <div class="col-sm-1" >
-				<%= game.name %><br />
-				<%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+		<div id="myCarousel-<%=index%>" class="carousel slide" data-ride="carousel" data-interval="false">
+			<ol class="carousel-indicators">
+				<li data-target="#myCarousel-<%=index%>" data-slide-to="0" class="active"></li>
+				<% (tag.games.count - 1).times do |i| %>
+				<li data-target="#myCarousel-<%=index%>" data-slide-to="<%= i+1 %>"></li>
+				<% end %>
+			</ol>
+
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active">
+					<% game = tag.games[0] %>
+					<%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+				</div>
+
+				<% tag.games[1..-1].each do |game| %>
+				<div class="carousel-item">
+					<%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+				</div>
+				<% end %>
 			</div>
-		<% end %>
+
+			<a class="left carousel-control" href="#myCarousel-<%=index%>" role="button" data-slide="prev">
+				<span class="icon-prev" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel-<%=index%>" role="button" data-slide="next">
+				<span class="icon-next" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
 	</div>
 	<% end %>
 </div>
