--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 	<% @tags.each_with_index do |tag, index| %>
+	<% if group(tag).count > 1 %>
 	<div class="row">
 		<div class="col-sm-12"><h1><%= tag.name %></h1></div>
 	</div>
@@ -8,20 +9,24 @@
 		<div id="myCarousel-<%=index%>" class="carousel slide" data-ride="carousel" data-interval="false">
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel-<%=index%>" data-slide-to="0" class="active"></li>
-				<% (tag.games.count - 1).times do |i| %>
+				<% (group(tag).count - 1).times do |i| %>
 				<li data-target="#myCarousel-<%=index%>" data-slide-to="<%= i+1 %>"></li>
 				<% end %>
 			</ol>
 
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
-					<% game = tag.games[0] %>
-					<%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+					<% group = group(tag)[0] %>
+					<% group.each do |game| %>
+					  <%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+					<% end %>
 				</div>
 
-				<% tag.games[1..-1].each do |game| %>
+				<% group(tag)[1..-1].each do |group| %>
 				<div class="carousel-item">
-					<%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+					<% group.each do |game| %>
+					  <%= link_to image_tag(game.thumbnail_url), game_path(game) %>
+					<% end %>
 				</div>
 				<% end %>
 			</div>
@@ -36,5 +41,6 @@
 			</a>
 		</div>
 	</div>
+	<% end %>
 	<% end %>
 </div>
