--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,21 @@
 <%= render "partials/header" %>
-
+<% if current_user == @user %>
 <h1>WELCOME <%= @user.username %></h1>
+<% else %>
+<h1><%= @user.username %> Profile</h1>
+<% end %>
 
-<% if current_user.friendships.where(friend_id:@user.id) == [] && current_user != @user %>
+<h2>About</h2>
+<p>Username:<%= @user.username %></p>
+<p>Email:<%= @user.email %></p>
+
+<% if !friend?(@user) %>
   <%= form_for :friendship, url:user_friendships_path(@user) do |f| %>
     <%= submit_tag("Add") %>
   <% end %>
-<% end %>
-<h3>Your Favorite Board Games:</h3>
+
+<% else %>
+<h3>Favorite Board Games:</h3>
 <% @games.each do |game| %>
   <%= link_to image_tag(game.thumbnail_url),game_path(game) %>
   <p>Name: <%= game.name %></p>
@@ -19,4 +27,8 @@
  <h3>Following:</h3>
  <% @friends.each do |friend| %>
    <p><%= link_to friend.username, user_path(friend) %></p>
+     <%= form_for :friendship, url:user_friendship_path(current_user ,friend),method: :delete do |f| %>
+    <%= submit_tag("Delete") %>
+  <% end %>
  <% end %>
+<% end %>
