adds functional navbar and a little style

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,1 +1,8 @@
-@import "bootstrap";  
+@import "bootstrap";
+
+body { padding-top: 55px; }
+
+.navbar {
+  background-color: white;
+  box-shadow: 0 0 2px 0;
+}
