adds search bar

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,8 +1,18 @@
 @import "bootstrap";
 
-body { padding-top: 55px; }
+body { padding-top: 60px; }
 
 .navbar {
   background-color: white;
   box-shadow: 0 0 2px 0;
+  height: 50px;
 }
+
+.navbar-header {
+  display: flex;
+  height: 50px;
+}
+
+.form-group { display: flex;}
+
+.search { width: 300px; }
