--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -9,6 +9,13 @@
   height: 50px;
 }
 
-.form-group { display: flex;}
+.form-group {display: flex;}
 
 .search { width: 300px; }
+.search input[type='submit'] {visibility: hidden;}
+.search input[type='text'] {
+  border: none;
+  cursor: pointer;
+}
+.search input[type='text']::-webkit-input-placeholder {color: #0275d8;}
+.search input[type='text']:hover::-webkit-input-placeholder {color: #014c8c;}
