--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -32,11 +32,11 @@
 			</div>
 
 			<a class="left carousel-control" href="#myCarousel-<%=index%>" role="button" data-slide="prev">
-				<span class="icon-prev" aria-hidden="true"></span>
+				<span class="" aria-hidden="true"></span>
 				<span class="sr-only">Previous</span>
 			</a>
 			<a class="right carousel-control" href="#myCarousel-<%=index%>" role="button" data-slide="next">
-				<span class="icon-next" aria-hidden="true"></span>
+				<span class="" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
