--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 <% @games.each do |game| %>
   <%= link_to image_tag(game.thumbnail_url),game_path(game) %>
   <p>Name: <%= game.name %></p>
-  <p>Votes: <%= game.vote %></p>
+  <p>Votes: <%= game.votes.where(vote_direction:true).count %></p>
     <%= form_for :favorite, url:user_favorite_path(current_user,game), method: :delete do |f| %>
     <%= submit_tag("Delete") %>
   <% end %>
