--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,6 +4,10 @@
   height: 50px;
 }
 
+.navbar-brand {
+  font-family: 'Bangers', cursive;
+}
+
 .navbar-header {
   display: flex;
   height: 50px;
