--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -1,14 +1,31 @@
-$carousel-image-size: 186px;
+$image-size: 100%;
+$img-div-size: calc(16.66666% - 5px);
 
-.carousel {
-  overflow:scroll;
+.carousel-item.active {
+  display: flex !important;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
+// // .carousel-item {
+//   display: flex;
+// }
+// div.carousel-item a {
+//   display: flex;
+// }
 
+.img-container {
+  // display: flex;
+  height: $img-div-size;
+  width: $img-div-size;
+  padding: none;
+  margin: none;
+  border: none;
+}
 .carousel-item img {
-  max-width: $carousel-image-size;
-  max-height: $carousel-image-size;
-  width: $carousel-image-size;
-  height: $carousel-image-size;
+  // max-width: $carousel-image-size;
+  // max-height: $carousel-image-size;
+  width: $image-size;
+  height: $image-size;
 }
 
 a.right.carousel-control {
