--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,7 +2,7 @@
 	<% @tags.each_with_index do |tag, index| %>
 	<% if group(tag).count > 1 %>
 	<div class="row">
-		<div class="col-sm-12"><h1><%= tag.name %></h1></div>
+		<div class="col-sm-12"><h1 class="tag-name"><%= tag.name %></h1></div>
 	</div>
 
 	<div class="row">
