--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -3,15 +3,15 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/">BGT</a>
       <% if current_user %>
-        <%= link_to "Home", user_path(current_user), class: "btn"%>
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn" %>
+        <%= link_to "Home", user_path(current_user), class: "btn nav-btn"%>
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn nav-btn" %>
       <% else %>
-        <%= link_to "Login", new_user_session_path, class: "btn"%>
-        <%= link_to "Register", new_user_registration_path, class: "btn" %>
+        <%= link_to "Login", new_user_session_path, class: "btn nav-btn"%>
+        <%= link_to "Register", new_user_registration_path, class: "btn nav-btn" %>
       <% end %>
       <form class="search navbar-form" action="/search" method="GET">
         <div class="form-group">
-          <input type="text" class="form-control" name="search" placeholder="Search">
+          <input type="text" class="form-control nav-btn" name="search" placeholder="Search">
           <input type="submit" value="Search"/>
         </div>
       </form>
