changes button size

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -21,10 +21,12 @@ $img-div-size: 186px;
   height: $image-size;
 }
 
+a.carousel-control {
+  width: 100px;
+}
 a.right.carousel-control {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
-
 a.left.carousel-control {
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.0001) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
