adds fields to sign up and fixes home carousel button issue

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -5,7 +5,7 @@ $img-div-size: 186px;
 
 .carousel-item.active {
   display: flex !important;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   justify-content: space-between;
 }
 
