--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,6 @@
 <link href="http://fontawesome.io/assets/font-awesome/css/font-awesome.css" rel="stylesheet" media="screen">
 <div class="container">
+  <% p current_user %>
 
   <% if @user_results.count > 0 %>
   <div class="row">
@@ -10,10 +11,20 @@
     <% result_array.each do |result| %>
       <li class="search-result">
         <div class="card">
+          <% if result.image_url %>
           <%= link_to image_tag(result.image_url, class:"card-img-top"), user_path(result.id) %>
+          <% end %>
           <div class="card-block">
             <h4 class="card-title"><%="#{result.first_name} #{result.last_name}"%></h4>
-            <a href="#" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Add Friend</a>
+            <% if !friend?(result) %>
+            <%= form_for :friendship, url:user_friendships_path(result) do |f| %>
+              <a href="#" class="btn btn-primary enemy" onclick='this.parentNode.submit(); return false;'><i class="fa fa-plus" aria-hidden="true"></i> Add Friend</a>
+            <% end %>
+            <% elsif friend?(result) %>
+            <a href="#" class="btn btn-primary friend"><i class="fa fa-check" aria-hidden="true"></i> Friends</a>
+            <% else %>
+            <a></a>
+            <% end %>
           </div>
         </div>
       </li>
