--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @comment, url: game_comments_path do |f| %>
+<%= form_for @comment, url: game_comments_path(@game) do |f| %>
   <%= f.label :comment %>:
   <%= f.text_field :body %><br />
   <%= f.submit %>
