--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,14 +1,31 @@
-.col-centered{
-    float: none;
-    margin: 0 auto;
+
+
+.center-block {
+	display: block;
+	padding-left: 125px;
+	padding-right: auto;
+}
+
+.profile-pic{
+	height:300px;
+	width: 250px;
 }
 
 .image-size{
-  width: 200px;
-  height: 200px;
+  	width: 100%;
+  	height: 40%;
 }
 
-.pic-container{
-  margin-top: 10px;
+.game-pic-container{
+  	margin-top: 10px;
+  	padding-left:0;
+  	padding-right:0;
+  	height: 300px;
+	width: 200px;
+	margin-left:30px;
+}
+
+ul{
+	list-style-type: none;
 }
 
