--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -11,7 +11,7 @@
 	width: 250px;
 }
 
-.image-size{
+.game-image-size{
   	width: 100%;
   	height: 40%;
 }
@@ -20,12 +20,31 @@
   	margin-top: 10px;
   	padding-left:0;
   	padding-right:0;
-  	height: 300px;
+  	height: 250px;
 	width: 200px;
 	margin-left:30px;
+}
+
+.profile-pic-container{
+	margin-top: 10px;
+  	padding-left:0;
+  	padding-right:0;
+  	height: 280px;
+	width: 200px;
+	margin-left:30px;
+}
+
+.profile-image-size{
+	width: 100%;
+  	height: 60%;
 }
 
 ul{
 	list-style-type: none;
 }
 
+.game-pic-container:hover, .profile-pic-container:hover{
+	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
