--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,4 +1,8 @@
-
+.profile-inform-container{
+	margin-top:30px;
+	height:600px;
+	background-color:red;
+}
 
 .center-block {
 	display: block;
@@ -47,4 +51,8 @@ ul{
 	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.text-center{
+	text-align:center;
 }
