--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,15 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-5 center-block">
+    <div class="col-md-12 ">
       <% if current_user == @user %>
-        <h1>Hi <%=@user.username %>!</h1>
+        <h1 class="text-center">Hi <%=@user.username %>!</h1>
       <% else %>
-        <h1><%= @user.username %> Profile</h1>
+        <h1 class="text-center"><%= @user.username %> Profile</h1>
       <% end %> 
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5 center-block profile-inform-container">
       <img src="<%= @user.image_url %>" class="profile-pic">
       <p>Name: <%= @user.first_name+ ' ' + @user.last_name%></p>
       <p>Username:<%= @user.username %></p>
