--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,30 +1,42 @@
-<%# <%= render partial: "header", layout: "" %>
-<h1><%= @game.name %></h1>
-<div>Published in <%= @game.publish_year %></div>
-<div><%= @tag.name %></div>
-<img src="<%= @game.thumbnail_url %>">
-<div>Number of players: <%= @game.min_players %> – <%= @game.max_players %></div>
-<div>Upvoted <%= @game.votes.where(vote_direction:true).count %> times</div>
-<p><%= @game.description %></p>
-<% if current_user %>
-<%= render 'partials/voteform',{ type: @game, type_name:'Game'} %>
-<% if !favorite?(@game) %>
-  <%= form_tag(user_favorites_path(@game), method: :post) do %>
-  <div><%= submit_tag 'Add to Favorites' %></div>
-<% end %>
-<% end %>
+<div class="game-container">
+  <div class="game-name-container">
+    <h1><%= @game.name %></h1>
+    <div>Published in <%= @game.publish_year %></div>
+    <div><%= @tag.name %></div>
+  </div>
+  <div class="game-detail-container">
+    <div class="game-profile-container">
+      <img src="<%= @game.thumbnail_url %>">
+      <p class="list-border" style="margin-top:30px;">Number of players: <%= @game.min_players %> – <%= @game.max_players %></p>
+      <p class="list-border">Upvoted <%= @game.votes.where(vote_direction:true).count %> times</p>
+    </div>
 
-<%= link_to 'Comment', new_game_comment_path(@game), id: "new_form_link" %>
+    <div class="game-des-comment-container">
+      <div class="game-des-container">
+        <h2>Description</h2>
+        <p><%= @game.description %></p>
+        <% if current_user %>
+        <div class="game-vote-form">
+        <%= render 'partials/voteform',{ type: @game, type_name:'Game', game_id:@game.id} %>
+        </div>
+        <% if !favorite?(@game) %>
+        <%= form_tag(user_favorites_path(@game), method: :post) do %>
+        <%= submit_tag('Add to Favorites',class:"btn btn-primary") %>
+        <% end %>
+        <% end %>
+      </div>
+      <div class="game-comment-container">
 
-<div id="comment-form" style="display:none;">Hello</div>
-<ul>
-  <% @comments.each do |comment| %>
-    <li><%= comment.body %>
-    vote:<%= comment.votes.where(vote_direction:true).count %> </li>
-    <%= render 'partials/voteform',{ type: comment, type_name:'Comment'} %>
-  <% end %>
-</ul>
+        <% @game.comments.each do |comment| %>
+        <h4><%= comment.user.username %></h4>
+        <p><%= comment.body %></p>
+        <p><%= comment.votes.where(vote_direction:true).count %></p>
+        <%= render 'partials/voteform',{ type: comment, type_name:'Comment', game_id:@game.id} %>
+        <% end %>
+        <%= render "partials/comment", {game: @game} %>
+      </div>
+      <% end %>
+    </div>
+
+  </div>
 </div>
-<% end %>
-
-<%= hidden_field_tag "game_id_field", @game.id %>
