Fix background color to white

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,5 +1,5 @@
 body{
-  background-color:#8c8f91;
+  background-color: white;
 }
 .add-friend{
   margin-top:10px;
@@ -39,7 +39,7 @@ body{
 	height:300px;
 	width: 250px;
 	display: block;
-    margin: 10px auto;
+  margin: 10px auto;
 }
 
 .game-image-size{
@@ -59,19 +59,19 @@ body{
 }
 
 .game-pic-container{
-  	margin-top: 10px;
-  	padding-left:0;
-  	padding-right:0;
-  	height: 280px;
+	margin-top: 10px;
+	padding-left:0;
+	padding-right:0;
+	height: 280px;
 	width: 200px;
 	margin-left:30px;
 }
 
 .profile-pic-container{
 	margin-top: 10px;
-  	padding-left:0;
-  	padding-right:0;
-  	height: 280px;
+	padding-left:0;
+	padding-right:0;
+	height: 280px;
 	width: 200px;
 	margin-left:30px;
 }
